# project-management

./: .gitignore  Cargo.toml  README.md  build.rs  ec2.nix  flake.nix
.github/workflows/: build.yml
frontend/: .gitignore  index.html  package-lock.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: App.svelte  app.css  main.js
frontend/src/lib/: ChangePassword.svelte  CreateAccount.svelte  Invite.svelte  Login.svelte  Messages.svelte  Modal.svelte  NewProject.svelte  Project.svelte  SelectUser.svelte  Task.svelte  jwt.js  login.js  stores.js  users.js
migrations/2022-11-08-015207_users_table/: up.sql
migrations/2022-11-08-031823_projects/: down.sql  up.sql
migrations/2022-11-09-212224_task_done/: down.sql  up.sql
migrations/2022-11-17-012921_cascade_delete_tasks/: down.sql  up.sql
migrations/2022-11-22-202927_check_lengths/: down.sql  up.sql
migrations/2022-11-28-175739_colors/: down.sql  up.sql
migrations/2022-11-29-020057_longer_tasks/: down.sql  up.sql
migrations/2022-12-05-043833_admin/: up.sql
src/: auth.rs  jwt.rs  lib.rs  main.rs  models.rs  pool.rs  projects.rs  schema.rs  setup.rs  tasks.rs  test.rs  users.rs
