[package]
name = "engineering-web-portal"
version = "0.1.0"
authors = ["James Connolly <connollyjames@nhsdlions.org>"]
license = "AGPL-3.0-only"
edition = "2021"

[dependencies]
sha3 = "0.10"
jwt-simple = "0.11"
constant_time_eq = "0.2"
diesel_migrations = "2.0"

[dependencies.rocket]
version = "0.5.0-rc.2"
default-features = false
features = ["json"]

[target.'cfg(not(windows))'.dependencies.libsqlite3-sys]
version = "^0"

[target.'cfg(windows)'.dependencies.libsqlite3-sys]
version = "^0"
features = ["bundled"]

[dependencies.diesel]
version = "2.0"
default-features = false
features = ["sqlite"]

[features]
default = ["debug", "rebuild-static"]
debug = []
rebuild-static = ["static"]
static = []
